Add section Reviews

--- a/index.html
+++ b/index.html
@@ -117,18 +117,87 @@
     </section> <!-- /.section -->
 
     <!-- Clients -->
-    <section class="section">
+    <section class="section section--map">
         <div class="container">
             <h2 class="section__title">
                 <span>Our</span> Clients
             </h2>
 
             <div class="clients">
-                <div class="clients__logos"></div>
-                <div class="clients__reviews"></div>
-            </div>
-        </div>
-    </section>
+                <div class="clients__logos">
+                    <ul class="clients__list">
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/atica.svg" alt="Atica">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hex-lab 1.svg" alt="Hex-lab">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/amara.svg" alt="Amara">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/muzica.svg" alt="Musica">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/solaytic.svg" alt="Solaytic">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hexa.svg" alt="Hexa">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/utosia.svg" alt="Utosia">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/fox.svg" alt="Fox">
+                            </a>
+                        </li>
+                    </ul>
+                </div> <!-- /.clients__logos -->
+                <div class="clients__reviews">
+                    <div class="reviews">
+                        <div class="reviews__item">
+                            <div class="reviews__header">
+                                <img class="reviews__photo" src="https://via.placeholder.com/100" alt="">
+                                <div class="reviews__header-content">
+                                    <div class="reviews__name">John Smith</div>
+                                    <div class="reviews__company">FOX Hub CEO</div>
+                                </div>
+                            </div>
+                            <div class="reviews__content">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+                                </p>
+                                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- /.clients -->
+            <a class="btn btn--orange" href="#">Become a client</a>
+            <span class="clients-love">we love our clients</span>
+        </div> <!-- /.container -->
+    </section> <!-- /.section -->
 
 
 
