--- a/index.html
+++ b/index.html
@@ -200,6 +200,49 @@
     </section> <!-- /.section -->
 
 
+    <!-- Benefits -->
+    <div class="section">
+        <div class="container">
+            <div class="benefits">
+                <div class="benefits__col">
+                    <ul class="benefits-list">
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Safety</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">High quality drivers</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Guarantee &amp; Support 24/7</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+
+                        <li class="benefits-list__item">
+                            <h4 class="benefits-list__title">Personal manager</h4>
+                            <div class="benefits-list__text">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div> <!-- /.benefits__col -->
+                <div class="benefits__col">
+                    <img class="img" src="assets/images/benefits/benefits-1.jpg" alt="Benefits photo">
+                </div>
+            </div> <!-- /.benefits -->
+        </div> <!-- /.container -->
+    </div> <!-- /.section -->
+
+
 
 
 </body>
