--- a/index.html
+++ b/index.html
@@ -242,6 +242,70 @@
         </div> <!-- /.container -->
     </div> <!-- /.section -->
 
+    <!-- Team -->
+    <section class="section section--gray">
+        <div class="container">
+            <h2 class="section__title"><span>Our</span> team</h2>
+
+            <div class="team">
+                <div class="team__col">
+                    <div class="team__item">
+                        <img class="team__photo" src="assets/images/team/member-1.jpg" alt="Member of team">
+                        <div class="team__name">John Smith</div>
+                        <div class="team__prof">Logistic manager - 8 years experience</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/e-mail.svg" alt="e-mail icon">
+                                <a href="mailto:john@centerlogistic.com">john@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/call.svg" alt="phone icon">
+                                <a href="tel:+987412512543">+987412512543</a>                           
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="team__col">
+                    <div class="team__item">
+                        <img class="team__photo" src="assets/images/team/member-2.jpg" alt="Member of team">
+                        <div class="team__name">Daniel Kore</div>
+                        <div class="team__prof">Software engineer</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/e-mail.svg" alt="e-mail icon">
+                                <a href="mailto:daniel@centerlogistic.com">daniel@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/call.svg" alt="phone icon">
+                                <a href="tel:+987423252253">+987423252253</a>                           
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="team__col">
+                    <div class="team__item">
+                        <img class="team__photo" src="assets/images/team/member-3.jpg" alt="Member of team">
+                        <div class="team__name">Anna Filler</div>
+                        <div class="team__prof">Marketing specialist - 10 years experience</div>
+                        <ul class="team__contacts">
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/e-mail.svg" alt="e-mail icon">
+                                <a href="mailto:anna@centerlogistic.com">anna@centerlogistic.com</a>
+                            </li>
+                            <li>
+                                <img class="team__contacts-icon" src="assets/images/team/call.svg" alt="phone icon">
+                                <a href="tel:+987412512543">+98735353456</a>                           
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div> <!-- /.team -->
+        </div> <!-- /.container -->
+    </section> <!-- /.section -->
+
+
 
 
 
