--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             <div class="header__inner">
                 <div class="header__item__left">
                     <div class="header__item__logo">
-                        <img class="header__item__logo__img" src="assets/images/header/logo.svg" alt="Logo CenterLogistic">
-                        <div class="header__item__logo__text">CenterLogistic</div>
+                        <a class="logo__link" href="index.html">
+                            <img class="header__item__logo__img" src="assets/images/header/logo.svg" alt="Logo CenterLogistic">
+                            <div class="header__item__logo__text">CenterLogistic</div>
+                        </a>
                     </div>
                 </div>
                 <div class="header__item">
                     <nav class="nav">
-                        <a class="nav__link" href="#">Services</a>
+                        <a class="nav__link active" href="#">Services</a>
                         <a class="nav__link" href="#">Clients</a>
                         <a class="nav__link" href="#">Benefits</a>
                         <a class="nav__link" href="#">Team</a>
@@ -350,7 +352,7 @@
                     </div>
                 </article>
             </div> <!-- /.news -->
-            <a class="btn btn--orange btn--shadow" href="#">
+            <a class="btn btn--orange btn--shadow" href="blog.html">
                 <span>Visit blog</span>
             </a>
         </div> <!-- /.container -->
@@ -360,10 +362,12 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__logo">
-                <img class="footer__logo-img" src="assets/images/footer/logo.svg" alt="logo">
-                <h4 class="footer__title">
-                    CenterLogistic
-                </h4>
+                <a class="logo__link" href="index.html">
+                    <img class="footer__logo-img" src="assets/images/footer/logo.svg" alt="logo">
+                    <h4 class="footer__title">
+                        CenterLogistic
+                    </h4>
+                </a>
             </div>
             <address class="footer__contacts">
                 <p>New York, Street, ZIP code
@@ -453,7 +457,7 @@
                 <img src="assets/images/modals/close.svg" alt="close">
             </button>
         </div> <!-- /.modal__inner -->
-    </div> <!-- /.modal #becomeClientModal -->
+    </div> <!-- /.modal #thanksModal -->
 
 
 
