--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<div class="page">
+    
      <!-- Header -->
      <header class="header">
         <div class="container">
@@ -27,11 +29,9 @@
                 <div class="header__item">
                     <nav class="nav">
                         <a class="nav__link" href="index.html">Home Page</a>
-                        <a class="nav__link" href="#">Privacy Policy</a>
-                        <a class="nav__link" href="#">Terma &amp; Conditions</a>
-                        <a class="nav__link" href="#">Team</a>
-                        <a class="nav__link" href="#">News</a>
-                        <a class="nav__link" href="#">Contact Us</a>
+                        <a class="nav__link active" href="blog.html">Blog</a>
+                        <a class="nav__link" href="text.html">Privacy Policy</a>
+                        <a class="nav__link" href="text.html">Terma &amp; Conditions</a>
                     </nav>
                 </div>
             </div> <!-- /.header__inner -->
@@ -42,7 +42,7 @@
     <div class="intro intro--blog"></div>
 
     <!-- Main -->
-    <section class="section">
+    <section class="section section--last">
         <div class="container">
             <main class="main">
                 <div class="main__col">
@@ -145,6 +145,8 @@
             </nav>
         </div>
     </footer>
+
+</div> <!-- /.page -->    
 
 
 </body>
