--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     
+<div class="page">
+
     <!-- Header -->
     <header class="header">
         <div class="container">
@@ -327,7 +329,7 @@
     </section>
 
     <!-- News -->
-    <section class="section">
+    <section class="section section--last">
         <div class="container">
             <h2 class="section__title"><span>Interesting</span> to read</h2>
 
@@ -383,7 +385,7 @@
     </footer>
 
 
-
+</div> <!-- /.page -->
 
 
 
@@ -458,6 +460,7 @@
             </button>
         </div> <!-- /.modal__inner -->
     </div> <!-- /.modal #thanksModal -->
+
 
 
 
