Add media for all pages

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                         <a class="nav__link" href="#">News</a>
                         <a class="nav__link" href="#">Contact Us</a>
                     </nav>
+
+                    <button class="burger" type="button">
+                        <img class="burger__icon" src="assets/images/header/burger.svg" alt="menu">
+                    </button>
                 </div>
             </div> <!-- /.header__inner -->
         </div> <!-- /.container -->
@@ -132,49 +136,49 @@
                     <ul class="clients__list">
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/atica.svg" alt="Atica">
+                                <img class="img clients__list-logo" src="assets/images/clients/atica.svg" alt="Atica">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/hex-lab 1.svg" alt="Hex-lab">
+                                <img class="img clients__list-logo" src="assets/images/clients/hex-lab 1.svg" alt="Hex-lab">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/amara.svg" alt="Amara">
+                                <img class="img clients__list-logo" src="assets/images/clients/amara.svg" alt="Amara">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/muzica.svg" alt="Musica">
+                                <img class="img clients__list-logo" src="assets/images/clients/muzica.svg" alt="Musica">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/solaytic.svg" alt="Solaytic">
+                                <img class="img clients__list-logo" src="assets/images/clients/solaytic.svg" alt="Solaytic">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/hexa.svg" alt="Hexa">
+                                <img class="img clients__list-logo" src="assets/images/clients/hexa.svg" alt="Hexa">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/utosia.svg" alt="Utosia">
+                                <img class="img clients__list-logo" src="assets/images/clients/utosia.svg" alt="Utosia">
                             </a>
                         </li>
 
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/fox.svg" alt="Fox">
+                                <img class="img clients__list-logo" src="assets/images/clients/fox.svg" alt="Fox">
                             </a>
                         </li>
                     </ul>
@@ -207,8 +211,9 @@
 
 
     <!-- Benefits -->
-    <div class="section">
+    <section class="section">
         <div class="container">
+            <h2 class="section__title"><span>Our</span> benefits</h2>
             <div class="benefits">
                 <div class="benefits__col">
                     <ul class="benefits-list">
@@ -246,7 +251,7 @@
                 </div>
             </div> <!-- /.benefits -->
         </div> <!-- /.container -->
-    </div> <!-- /.section -->
+    </section> <!-- /.section -->
 
     <!-- Team -->
     <section class="section section--gray">
@@ -256,7 +261,7 @@
             <div class="team">
                 <div class="team__col">
                     <div class="team__item">
-                        <img class="team__photo" src="assets/images/team/member-1.jpg" alt="Member of team">
+                        <img class="team__photo img" src="assets/images/team/member-1.jpg" alt="Member of team">
                         <div class="team__name">John Smith</div>
                         <div class="team__prof">Logistic manager - 8 years experience</div>
                         <ul class="team__contacts">
@@ -274,7 +279,7 @@
 
                 <div class="team__col">
                     <div class="team__item">
-                        <img class="team__photo" src="assets/images/team/member-2.jpg" alt="Member of team">
+                        <img class="team__photo img" src="assets/images/team/member-2.jpg" alt="Member of team">
                         <div class="team__name">Daniel Kore</div>
                         <div class="team__prof">Software engineer</div>
                         <ul class="team__contacts">
@@ -292,7 +297,7 @@
 
                 <div class="team__col">
                     <div class="team__item">
-                        <img class="team__photo" src="assets/images/team/member-3.jpg" alt="Member of team">
+                        <img class="team__photo img" src="assets/images/team/member-3.jpg" alt="Member of team">
                         <div class="team__name">Anna Filler</div>
                         <div class="team__prof">Marketing specialist - 10 years experience</div>
                         <ul class="team__contacts">
